syntax = "proto3";
import "lorawan.proto";
import "core.proto";

package core;

message DataBrokerReq {
    LoRaWANData     Payload     = 1;
    Metadata        Metadata    = 2;
}

message DataBrokerRes {
    LoRaWANData     Payload     = 1;
    Metadata        Metadata    = 2;
}

message SubPersoBrokerReq {
	string          HandlerNet  = 1;
	bytes           AppEUI      = 2;
	bytes           DevAddr     = 3;
	bytes           NwkSKey     = 4;
}

message SubPersoBrokerRes{}

service Broker {
    rpc HandleData              (DataBrokerReq)         returns (DataBrokerRes);
    rpc SubscribePersonalized   (SubPersoBrokerReq)     returns (SubPersoBrokerRes);
}
